vlib/v/checker/tests/print_char.out
vlib/v/checker/tests/print_char.vv:1:1: error: `println` cannot print type `char` directly, print its address or cast it to an integer instead
    1 | println(char(91))
      | ~~~~~~~~~~~~~~~~~
